--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -3,17 +3,20 @@
    ========================================================================== */
 
 #main {
-    @include container;
-    @include clearfix;
-    margin-top: 2em;
-    padding-left: 1em;
-    padding-right: 1em;
-    animation: intro 0.3s both;
-    animation-delay: 0.35s;
-  
-    @include breakpoint($x-large) {
-      max-width: $x-large;
-    }
+  @include clearfix;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1em;
+  padding-right: 1em;
+  -webkit-animation: $intro-transition;
+  animation: $intro-transition;
+  max-width: 10%;
+  -webkit-animation-delay: 0.15s;
+  animation-delay: 0.15s;
+
+  @include breakpoint($x-large) {
+    max-width: $x-large;
+  }
 }
 
 .page {
