--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -21,7 +21,7 @@
 
 .page {
   @include breakpoint($large) {
-    float: right;
+    float: justify;
     width: calc(100% - #{$right-sidebar-width-narrow});
     padding-right: $right-sidebar-width-narrow;
   }
