--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -133,6 +133,7 @@
     @include breakpoint($large) {
       padding: 5px;
       border: 1px solid $border-color;
+      max-width: 200px;
     }
   }
 }
