--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -136,7 +136,7 @@
       max-width: 175px;
     }
 
-    @include breakpoint($medium) {
+    @include breakpoint($medium-wide) {
       max-width: 100px;
     }
   }
