--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -5,3 +5,8 @@
     </a>
   </li>
 -->
+<li>
+  <a href="https://scholar.google.it/citations?user=7ihnSOQAAAAJ&hl=en&oi=ao" itemprop="sameAs" rel="nofollow noopener noreferrer">
+    <i class="fas fa-graduation-cap" aria-hidden="true"></i> Google Scholar
+  </a>
+</li>
